manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-nuc-ingress
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - wojciech.trefon.pl
    secretName: letsencrypt-wojciech-trefon-pl
  - hosts:
    - smart.trefon.pl
    secretName: letsencrypt-smart-trefon-pl
  rules:
  - host: wojciech.trefon.pl
    http:
      paths:
      - backend:
          service:
            name: portfolio-service
            port:
              number: 8080
        path: /?(.*)
        pathType: ImplementationSpecific
  - host: smart.trefon.pl
    http:
      paths:
      - backend:
          service:
            name: home-assistant-service
            port:
              number: 8123
        path: /?(.*)
        pathType: ImplementationSpecific
